FIX: Word wrap for quote buttons (#24620)
The button text was becoming multiline unnecessarily

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -610,6 +610,10 @@ aside.quote {
         color: var(--tertiary);
       }
     }
+
+    .d-button-label {
+      white-space: nowrap;
+    }
   }
 
   .quote-sharing {
